--- a/source/sass/blocks/merit.scss
+++ b/source/sass/blocks/merit.scss
@@ -87,6 +87,10 @@
     &:hover {
       .merit__image {
         left: 5%;
+        filter: blur(30px);
+        @include vp-419 {
+          left: 10%;
+        }
       }
 
       .merit__num {
@@ -164,6 +168,7 @@
     z-index: -1;
     width: 350px;
     height: 350px;
+    -webkit-backdrop-filter: blur(30px);
     backdrop-filter: blur(30px);
     border-radius: 50%;
     img {
