--- a/source/sass/blocks/merit.scss
+++ b/source/sass/blocks/merit.scss
@@ -174,9 +174,11 @@
     border-radius: 50%;
     opacity: 1;
     img {
+      backdrop-filter: blur(30px);
       width: 350px;
       height: 350px;
       opacity: 0.5;
+      border-radius: 50%;
     }
 
     @include vp-1279 {
