--- a/source/pug/components/blocks/intro.pug
+++ b/source/pug/components/blocks/intro.pug
@@ -6,33 +6,33 @@ mixin intro()
         ul.intro__list
           li.intro__item
             p Полный цикл разработки проекта от идеи до продвижения
-            img(src="img/content/icon-intro1.png").intro__bg
+            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
             +icon("icon-intro1", 38, 38).intro__icon  
           li.intro__item
             p Кроссбраузерная и адаптивная современная верстка
-            img(src="img/content/icon-intro1.png").intro__bg
+            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
             +icon("icon-intro2", 38, 38).intro__icon
           li.intro__item
             p Современный продающий дизайн сайта
-            img(src="img/content/icon-intro1.png").intro__bg
+            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
             +icon("icon-intro3", 38, 38).intro__icon
           li.intro__item
             p Проверенные CMS решения: 1C-Битрикс или ModX
-            img(src="img/content/icon-intro1.png").intro__bg
+            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
             +icon("icon-intro4", 38, 38).intro__icon
           li.intro__item
             p Полная техническая и поисковая SEO оптимизация
-            img(src="img/content/icon-intro1.png").intro__bg
+            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
             +icon("icon-intro5", 38, 38).intro__icon
           li.intro__item
             p Удобная админ-панель с интуитивно понятным интерфейсом
-            img(src="img/content/icon-intro1.png").intro__bg
+            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
             +icon("icon-intro6", 38, 38).intro__icon
           li.intro__item
             p Большой штат специалистов разной направленности
-            img(src="img/content/icon-intro1.png").intro__bg
+            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
             +icon("icon-intro7", 38, 38).intro__icon
           li.intro__item
             p Демократичное прозрачное ценообразование
-            img(src="img/content/icon-intro1.png").intro__bg
+            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
             +icon("icon-intro8", 38, 38).intro__icon
