--- a/source/pug/components/blocks/merit.pug
+++ b/source/pug/components/blocks/merit.pug
@@ -12,7 +12,7 @@ mixin merit()
                             span 10+
                         .merit__info 
                             .merit__info-img 
-                                img(src="img/content/ellipse.png")
+                                img(src="img/content/ellipse.png" alt="Окружность текста")
                             p Лет опыта в IT отрасли
                             p Выполненных проектов
                             p Гарантия срока
@@ -25,7 +25,7 @@ mixin merit()
                             span 10+
                         .merit__info 
                             .merit__info-img 
-                                img(src="img/content/ellipse.png")
+                                img(src="img/content/ellipse.png" alt="Окружность текста")
                             p Гарантия результата
                             p Продвигаемых запросов
                             p Сайтов на продвижении
