--- a/source/pug/components/blocks/about-card.pug
+++ b/source/pug/components/blocks/about-card.pug
@@ -2,5 +2,5 @@ mixin about-card(card)
     article.about-card 
         .about-card__content 
             .about-card__img 
-                +img("content/about", card.img.title, "png", 200, 200, card.title)
+                +img("content/about", card.img.title, "png", 200, 200, alt="Логотип клиента")
             .about-card__desc #{card.desc}
