--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -63,11 +63,12 @@
       height: 40px;
     }
 
-    svg {
+    svg,
+    img {
       display: block;
       width: 150px;
       height: 60px;
-
+      object-fit: contain;
       @include vp-1399 {
         width: 130px;
       }
@@ -96,6 +97,16 @@
     display: flex;
     align-items: center;
     gap: 30px;
+  }
+
+  &__social-link {
+    flex-shrink: 0;
+    img {
+      display: block;
+      width: 30px;
+      height: 30px;
+      object-fit: cover;
+    }
   }
 
   &__contacts {
