--- a/source/pug/components/blocks/intro.pug
+++ b/source/pug/components/blocks/intro.pug
@@ -2,37 +2,9 @@ mixin intro()
   section.intro
     .container
       .intro__wrapper
-        h1.intro__title Что мы предлагаем
-        ul.intro__list
-          li.intro__item
-            p Полный цикл разработки проекта от идеи до продвижения
-            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
-            +icon("icon-intro1", 38, 38).intro__icon  
-          li.intro__item
-            p Кроссбраузерная и адаптивная современная верстка
-            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
-            +icon("icon-intro2", 38, 38).intro__icon
-          li.intro__item
-            p Современный продающий дизайн сайта
-            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
-            +icon("icon-intro3", 38, 38).intro__icon
-          li.intro__item
-            p Проверенные CMS решения: 1C-Битрикс или ModX
-            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
-            +icon("icon-intro4", 38, 38).intro__icon
-          li.intro__item
-            p Полная техническая и поисковая SEO оптимизация
-            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
-            +icon("icon-intro5", 38, 38).intro__icon
-          li.intro__item
-            p Удобная админ-панель с интуитивно понятным интерфейсом
-            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
-            +icon("icon-intro6", 38, 38).intro__icon
-          li.intro__item
-            p Большой штат специалистов разной направленности
-            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
-            +icon("icon-intro7", 38, 38).intro__icon
-          li.intro__item
-            p Демократичное прозрачное ценообразование
-            img(src="img/content/icon-intro1.png" alt="Задний фон").intro__bg
-            +icon("icon-intro8", 38, 38).intro__icon
+        .intro__banner 
+          img(src="img/content/intro/intro-banner.webp")
+        .intro__info 
+          h1.intro__title Заботимся о коже с использованием научных открытий
+          p.intro__text atoveé — бренд уходовой косметики, предлагающий безопасные и эффективные решения для ухода за атопичной, сухой и чувствительной кожей.  Наши продукты основаны на научных исследованиях и разработаны с учетом потребностей клиентов, обеспечивая уверенность и комфорт в ежедневном уходе и особенно в периоды обострения.
+          a(href="#!").intro__link Подробнее
