--- a/source/pug/components/components.pug
+++ b/source/pug/components/components.pug
@@ -20,6 +20,9 @@ include ./blocks/intro
 include ./blocks/merit
 include ./blocks/about
 include ./blocks/about-card
+include ./blocks/collection
+include ./blocks/products
+include ./blocks/products-card
 
 //- Mixins
 
