--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -1,7 +1,7 @@
 extends ../components/base/layout
 
 block variables
-  - const title = "Top"
+  - const title = "atovee"
   - const openGraph = true
   - const wrapperMods = ""
   - const hasHeader = true
@@ -13,6 +13,6 @@ block variables
 block main
   main
     +intro()
-    +merit()
-    +about()
+    +collection()
+    +products()
 block modals
