--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,7 +38,8 @@
 @import "blocks/merit.scss";
 @import "blocks/about.scss";
 @import "blocks/about-card.scss";
-
+@import "blocks/collection.scss";
+@import "blocks/products.scss";
 // ---------------------------------
 
 // ❗❗❗ запрещено использовать изображения в css, касается как jpg \ png, так и svg
