--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -34,8 +34,8 @@ $black-to-right: linear-gradient(
 // переменная используемая в html для подключения скейлинга
 $fz-default: 16px;
 
-$ff-roboto: "Roboto", sans-serif;
-$ff-gerhaus: "Gerhaus", sans-serif;
+$ff-inter: "Inter", sans-serif;
+$ff-monts: "Montserrat", sans-serif;
 
 // Animation
 // ---------------------------------
