--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,24 +1,40 @@
 .intro {
+  background: linear-gradient(to bottom, #3CB4E5 5%, #00A0D2 40%, #6BC4E8);
   &__wrapper {
-    padding: 130px 0 70px;
-
+    padding: 0;
+    display: flex;
+    gap: 20px;
     @include vp-1199 {
-      padding: 100px 0 50px;
+      padding: 0;
     }
 
     @include vp-767 {
-      padding: 50px 0 25px;
+      padding: 0;
     }
   }
 
+  &__banner {
+    width: 790px;
+    height: 800px;
+    flex-shrink: 0;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  &__info {
+    padding: 150px 0 100px;
+  }
+
   &__title {
-    font-family: $ff-gerhaus;
-    font-size: 64px;
+    font-family: $ff-monts;
+    font-size: 64px; 
     line-height: 64px;
     color: $color-default-white;
-    margin: 0 0 44px;
+    margin: 0 0 50px;
     text-align: center;
-    text-transform: uppercase;
     @include vp-1199 {
       font-size: 40px;
       margin-bottom: 30px;
@@ -31,125 +47,29 @@
     }
   }
 
-  &__list {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-
-    @include vp-1199 {
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @include vp-767 {
-      grid-template-columns: 1fr;
-      gap: 10px;
-    }
+  &__text {
+    font-family: $ff-inter;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    color: $color-default-white;
+    margin-bottom: 50px;
   }
 
-  &__item {
-    max-width: 390px;
+  &__link {
+    display: block;
+    text-align: center;
+    border-radius: 50px;
+    max-width: 385px;
     width: 100%;
-    min-height: 132px;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 20px;
-    position: relative;
-    overflow: hidden;
-    transition: 0.3s;
-
-    @include vp-1199 {
-      max-width: 100%;
-    }
-
-    @include vp-767 {
-      min-height: 120px;
-    }
-
-    @include vp-389 {
-      min-height: 100px;
-    }
-
-    p {
-      font-family: $ff-roboto;
-      font-size: 20px;
-      line-height: 110%;
-      color: $color-default-white;
-      margin: 0;
-
-      @include vp-767 {
-        font-size: 18px;
-        max-width: 570px;
-      }
-
-      @include vp-389 {
-        font-size: 14px;
-        line-height: 16px;
-      }
-    }
-
-    &::before,
-    &::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      opacity: 0;
-      transition: width 0.3s, height 0.3s, opacity 0.3s;
-    }
-
-    &::before {
-      height: 10px;
-      width: 0;
-      background: linear-gradient(to right, #ea32d9 0%, #004bed 100%);
-    }
-
-    &::after {
-      width: 10px;
-      height: 0;
-      background: linear-gradient(to bottom, #ea32d9 0%);
-    }
-
-    &:hover {
-      &::before {
-        opacity: 1;
-        width: 100px;
-      }
-
-      &::after {
-        opacity: 1;
-        height: 100px;
-      }
-    }
-  }
-
-  &__item:hover > &__icon {
-    width: 45px;
-    height: 45px;
-  }
-
-  &__bg {
-    position: absolute;
-    z-index: -1;
-    filter: blur(10px);
-    left: 0;
-    bottom: 0;
-    width: 100px;
-    height: 100px;
-  }
-
-  &__icon {
-    position: absolute;
-    right: 5px;
-    bottom: 5px;
-    width: 38px;
-    height: 38px;
-    transition: 0.3s;
-
-    @include vp-767 {
-      width: 30px;
-      height: 30px;
-    }
+    background: $color-default-white;
+    font-family: $ff-inter;
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 700;
+    color: #00A0D2;
+    text-transform: uppercase;
+    padding: 19px 20px;
+    margin: 0 auto;
   }
 }
