--- a/source/sass/blocks/merit.scss
+++ b/source/sass/blocks/merit.scss
@@ -13,7 +13,7 @@
   }
 
   &__title {
-    font-family: $ff-gerhaus;
+    
     font-size: 64px;
     line-height: 64px;
     color: $color-default-white;
@@ -33,7 +33,7 @@
   }
 
   &__text {
-    font-family: $ff-roboto;
+    font-family: $ff-inter;
     font-size: 22px;
     line-height: 24px;
     color: $color-default-white;
@@ -138,7 +138,7 @@
     transition: 0.3s;
     span {
       display: block;
-      font-family: $ff-gerhaus;
+      
       font-size: 40px;
       line-height: 40px;
       color: $color-default-white;
@@ -213,7 +213,7 @@
     gap: 55px;
 
     p {
-      font-family: $ff-roboto;
+      font-family: $ff-inter;
       font-size: 22px;
       line-height: 24px;
       color: $color-default-white;
