--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,19 +1,19 @@
 @font-face {
   font-style: normal;
   font-weight: 400;
-  font-family: "Roboto";
+  font-family: "Inter";
 
   font-display: swap;
-  src: url("../fonts/Roboto-Regular.woff2") format("woff2"),
-    url("../fonts/Roboto-Regular.woff") format("woff");
+  src: url("../fonts/Inter-Regular.woff2") format("woff2"),
+    url("../fonts/Inter-Regular.woff") format("woff");
 }
 
 @font-face {
   font-style: normal;
-  font-weight: 400;
-  font-family: "Gerhaus";
+  font-weight: 600;
+  font-family: "Montserrat";
 
   font-display: swap;
-  src: url("../fonts/Gerhaus.woff2") format("woff2"),
-    url("../fonts/Gerhaus.woff") format("woff");
+  src: url("../fonts/Montserrat-SemiBold.woff2") format("woff2"),
+    url("../fonts/Montserrat-SemiBold.woff") format("woff");
 }
