--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -17,7 +17,7 @@ html {
   font-size: $fz-default;
   line-height: 120%;
   color: $color-default-black;
-  font-family: $ff-roboto;
+  font-family: $ff-inter;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   // оптимизация выравнивания шрифта относительно центра строки
@@ -30,7 +30,7 @@ body {
   width: 100%;
   height: 100%;
 
-  background-color: $color-test;
+  background-color: $color-default-white;
 }
 
 a {
@@ -39,6 +39,26 @@ a {
   border: none;
   margin: 0;
   padding: 0;
+}
+
+p {
+  margin: 0;
+}
+
+ul,
+ol,
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+button {
+  border: none;
+  background: transparent;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
 }
 
 img,
